# filemanager-fastapi

./: .env-example  .gitignore  LICENSE.txt  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  readme.md
api/: Dockerfile  pyproject.toml  start.sh
api/app/: .env-example  main.py  test_main.py
api/app/services/: serveDataFromUrl.py  serveUploadedFiles.py  serverQrcode.py
api/app/services/helpers/: alena.py  detectFileExtension.py  uniqueFileName.py
api/app/services/images/: generateQr.py  resize.py
api/app/services/security/: customBearerCheck.py
api/app/services/storage/: googleCloud.py  local.py  s3.py
api/app/services/videos/: optimize.py
certbot/: DockerFile  Dockerfile  run-certbot.sh
nginx/: Dockerfile  nginx.conf  startup.sh
nginx/sites/: app.conf  app.local.conf.example  app.ssl.conf.example
